.provarCaches/00D4P000000xR5ZUAU/objects/Flosum__Patch_Manifest__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__Attachment_ID__c</fullName>
        <label>Attachment ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Component_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Component History</label>
        <referenceTo>Flosum__Component_History__c</referenceTo>
        <relationshipName>Patch_Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Component_Name__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Component_Type__c</fullName>
        <label>Component Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ApexClass</fullName>
                    <default>true</default>
                    <label>ApexClass</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__Developer__c</fullName>
        <label>Changed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Folder__c</fullName>
        <label>Folder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Last_Updated_On__c</fullName>
        <label>Changed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__Parent_ID__c</fullName>
        <label>Parent ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Parent_Name__c</fullName>
        <label>Parent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Patch__c</fullName>
        <label>Deployment</label>
        <referenceTo>Flosum__Patch__c</referenceTo>
        <relationshipLabel>Deployment Manifests</relationshipLabel>
        <relationshipName>Patch_Manifests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Flosum__Source_Details__c</fullName>
        <formula>HYPERLINK(Flosum__Parent_ID__c , Flosum__Parent_Name__c , &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Source_Name__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Snapshot</fullName>
                </value>
                <value>
                    <fullName>Repository</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Branch</fullName>
                </value>
                <value>
                    <fullName>Organization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__Version__c</fullName>
        <formula>Flosum__Component_History__r.Flosum__Version__c</formula>
        <label>Version</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flosum__Zip_Parent_ID__c</fullName>
        <label>Zip Parent ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Deployments Manifest</label>
    <nameField>
        <displayFormat>PM-{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Deployment Manifest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patch Manifests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>